...
                android:textColor="@color/text_secondary"
                android:textSize="16sp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvArtists"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingHorizontal="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="12dp"
...
